Update media structure
